--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,6 @@
   "title": "Cypher",
   "description": "Learn about graph databases with the cypher query language",
   "version": "0.0.1",
-  "author": "Neo4j"
+  "author": "Neo4j",
+  "username": 24506156
 }
