updates to task message

--- a/manifest.json
+++ b/manifest.json
@@ -4,5 +4,5 @@
   "description": "Learn about graph databases with the cypher query language",
   "version": "0.0.1",
   "author": "Neo4j",
-  "username": 24506156
+  "username": "Neo4j"
 }
